urls support added

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -4,6 +4,7 @@
            <div class="box">
                <h3>Service Worker is great</h3>
                <button id="btn">post data</button>
+               <p>In nisi officia ex ipsum consequat Lorem est.</p>
            </div>
         </div>
     </div>
