--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,6 +5,7 @@
                <h3>Service Worker is great</h3>
                <button id="btn">post data</button>
                <p>In nisi officia ex ipsum consequat Lorem est.</p>
+               <p>Officia culpa irure eu velit nisi do proident proident.</p>
            </div>
         </div>
     </div>
