--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -36,6 +36,8 @@
         <a href="/view4">view4</a>
         <a href="/view5">view5</a>
         <a href="/view6">view6</a>
+        <a href="#main">#main</a>
+
     </div>
     {{{body}}}
 
@@ -49,7 +51,7 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <script src="app-0.1.js"></script>
 </body>
 
 </html>
